--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+# spring port
+
+server.port=8082
+
+#spring security
+spring.security.user.name=govardhan199
+spring.security.user.password=12345
+
+# Dao Connection
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root123
+
+
+# jpa
+spring.jpa.properties.hibernate.dailect=org.hibernate.dailect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#logger
 
