--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 server.port=8082
 
 #spring security
-spring.security.user.name=govardhan199
-spring.security.user.password=12345
+#spring.security.user.name=username
+#spring.security.user.password=1234
 
 # Dao Connection
 
@@ -20,4 +20,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #logger
-
+spring.mvc.format.date=dd/MM/yyyy
